(executable
  (name straight_line_grammar)
  (libraries base stdio)
)
(executable
  (name token)
)
(executable
  (name ml_lex)
  (libraries base stdio str)
)
(executable
  (name dfa)
  (libraries base stdio)
)
(executable
  (name nfa)
  (libraries base stdio)
)
(executable
  (name re_to_nfa)
  (libraries base stdio)
)
